<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">Город Дубна</string>
    <string name="news">НОВОСТИ</string>
    <string name="oapp">О ПРИЛОЖЕНИИ</string>
    <string name="history">ИСТОРИЯ</string>
    <string name="todo">todo</string>
    <string name="telefon">ТЕЛЕФОНЫ</string>
    <string name="transports">ТРАНСПОРТ</string>
    <string name="nasait">АФИША</string>
    <string name="title_activity_history">History</string>
    <string name="action_tel">Важные телефоны</string>
    <string name="action_tel2">Администрация</string>
    <string name="action_tel3">Гос. учреждения</string>
    <string name="action_tel4">Медицина</string>
    <string name="action_tel5">Образование</string>
    <string name="action_tel6">Транспорт</string>
    <string name="action_tel7">Досуг</string>
    <string name="action_tel8">Финансы</string>
    <string name="action_news">Все новости</string>
    <string name="action_news1">Городские новости</string>
    <string name="action_news2">Политика и экономика</string>
    <string name="action_afisha1">К/т "Волга-Волга"</string>
    <string name="action_afisha2">Др. мероприятия</string>
    <string name="action_afisha3">Музей ОИЯИ</string>
    <string name="action_afisha4">Дворец спорта "Радуга"</string>
    <string name="action_afisha5">Библиотека</string>
    <string name="share">Поделиться</string>
    <string name="action_transport">Городские автобусы</string>
    <string name="action_transport1">Выбор маршрута</string>
    <string name="action_transport2">Электрички Дубна</string>
    <string name="action_transport3">Электрички Б.Волга</string>
    <string name="action_transport4">Автобусы Б.Волга</string>
</resources>