<!--
  ~ /**
  ~  * Created by DemonApps on 16.07.20 23:17
  ~  * Copyright (c) 2020 . All rights reserved.
  ~  * Last modified 16.07.20 22:17
  ~  */
  -->

<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="ru.gorod.tver.ru.gorod_dubna.gorod.Transport">
    <item
        android:id="@+id/action_transport"
        android:orderInCategory="100"
        android:title="@string/action_transport"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_transport2"
        android:checkable="false"
        android:enabled="true"
        android:orderInCategory="100"
        android:title="@string/action_transport2"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_transport3"
        android:checkable="false"
        android:enabled="true"
        android:orderInCategory="100"
        android:title="@string/action_transport3"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_transport4"
        android:checkable="false"
        android:enabled="true"
        android:orderInCategory="100"
        android:title="@string/action_transport4"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_transport1"
        android:orderInCategory="100"
        android:title="@string/action_transport1"
        app:showAsAction="never" />
</menu>